@@ -219,11 +219,13 @@ set rules(LineWidth)    56
 #### Site Wipe #############################################
 #
 # - Virtual paths that cannot be wiped (case sensitive).
+# - Require the "-r" switch to recursively wipe a directory.
 #
 set wipe(NoPaths) {
   {/}
   {/!ADMIN/*}
 }
+set wipe(RecurseSwitch) False
 
 #### Dupe Checking #########################################
 #
