@@ -4,6 +4,7 @@
 
 nxTools v1.0.6 (not released):
   NEW: Option to define the allowed sample extensions (e.g. JPG, MPG, VOB).
+  NEW: Option to require the "-r" switch to recursively wipe a directory.
   FIX: [Sections] compatibility with the new optional "share section" in ioFTPD v6.x.
   FIX: "SITE PRE" compatibility with VFS files in ioFTPD v6.x.
   FIX: "SITE RESETSTATS" the alldn statistic type would not reset.
